fix: home apps gap and featured box width

--- a/week5/css/home.css
+++ b/week5/css/home.css
@@ -28,7 +28,7 @@
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     border: black 1px solid;
-    border-radius: 8px;
+    border-radius: 12px;
     font-size: 12px;
     font-family: 'Space Grotesk', sans-serif;
     margin-top: 10px;
@@ -141,19 +141,19 @@
     }
 
     .button2 {
-        font-size: 15px;
-        padding: 15px;
-    }
-
-    .button2 {
-        text-align: center;
+        font-size: 20px;
+        padding: 20px;
+        width: 100%;
     }
 
     .apps {
         flex-wrap: wrap;
+        gap: 0px;
     }
 
     .apps img {
-        width: calc(33.33% - 50px);
+        /* width: calc(33.33% - 50px); */
+        width: 40%;
+        padding: 20px;
     }
 }
