--- a/week5/css/usecase.css
+++ b/week5/css/usecase.css
@@ -8,17 +8,17 @@
 
 .title {
     display: none;
-    font-size: 40px;
+    font-size: 35px;
 }
 
 .title h1 {
     margin: 0;
-    font-weight: 800;
+    font-weight: 500;
 }
 
 .illus {
     width: 50%;
-    padding: 50px;
+    padding: 30px;
 }
 
 .white {
@@ -34,15 +34,16 @@
 }
 
 .info h1 {
-    font-size: 70px;
+    font-size: 60px;
     padding: 20px;
-    font-weight: normal;
+    font-weight: 500;
 
 }
 
 .info p {
     font-size: 20px;
     padding: 20px;
+    margin: 0;
     padding-right: 130px;
 }
 
@@ -144,7 +145,7 @@
     color: #191A23;
     border-radius: 15px;
     padding: 10px;
-    width: 30%;
+    width: 35%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -213,6 +214,12 @@ h1 {
     }
 }
 
+@media screen and (max-width:1305px) {
+    .rightside div {
+        width: 40%;
+    }
+}
+
 @media screen and (max-width:1165px) {
     .info h1 {
         font-size: 55px;
@@ -250,7 +257,13 @@ h1 {
         font-size: 12px;
     }
 
+    .rightside {
+        gap: 15px;
+    }
 
+    .rightside div {
+        width: 45%;
+    }
 }
 
 @media screen and (max-width:833px) {
@@ -320,6 +333,7 @@ h1 {
     .rightside {
         flex-direction: column;
         width: 100%;
+        gap: 15px;
     }
 
     .rightside div {
